# actix-web-static-files-example-angular-router

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml  README.md
backend/src/: lib.rs  main.rs
frontend/: Cargo.toml  MIT-LICENSE  README.md  build.rs
frontend/src/: lib.rs
frontend/web/: README.md  angular.json  package-lock.json  package.json
frontend/web/e2e/src/: app.e2e-spec.ts
frontend/web/src/app/: app.component.html  app.component.spec.ts  app.module.ts
xtask/: Cargo.toml
xtask/src/: main.rs
