[package]
name = "angular-example-backend"
version = "0.1.0"
authors = ["Alexander Korolev <kilork@yandex.ru>"]
edition = "2018"
categories = []
description = """
angular-example-backend description.
"""
homepage = "https://github.com/kilork/actix-web-static-files-example-angular-router"
keywords = []
license = "Unlicense OR MIT"
readme = "README.md"
repository = "https://github.com/kilork/actix-web-static-files-example-angular-router"

[features]

default = [ "ui" ]

ui = ["angular-example-frontend", "actix-web-static-files"]

[dependencies]
actix-web = { version = "3.0", features = ["rustls"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.8"

angular-example-frontend = { path = "../frontend", optional = true }
actix-web-static-files = { version = "3.0.4", features = [ "change-detection" ], optional = true }
