[package]
name = "angular-example-backend"
description = """
angular-example-backend description.
"""
version.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[features]

default = [ "ui" ]

ui = ["angular-example-frontend", "actix-web-static-files"]

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"

angular-example-frontend = { path = "../frontend", optional = true }
actix-web-static-files = { workspace = true, optional = true }
