[package]
name = "angular-example-frontend"
description = """
angular-example-frontend description.
"""
version.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
actix-web-static-files.workspace = true
static-files.workspace = true

[build-dependencies]
static-files.workspace = true
